--- a/WeatherApp/Resource/Info.plist
+++ b/WeatherApp/Resource/Info.plist
@@ -46,5 +46,7 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Whether App want to know your location.</string>
 </dict>
 </plist>
